--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -5,6 +5,8 @@
     <button type="submit">Search</button>
 </form>
 <br>
+
+<% console.log(authors[1].name) %> 
 <% authors.forEach(author => { %>
-    <div><% author.name %></div>
-<% )} %>
+    <div><%= author.name %></div>
+<% }) %>
