--- a/views/authors/new.ejs
+++ b/views/authors/new.ejs
@@ -1,6 +1,6 @@
 <h2>New Author</h2>
-<form action="/Authors" method="POST">
+<form action="/authors" method="POST">
     <%- include("_form_fields") %>
-    <a href="/Authors">Cancel</a>
+    <a href="/authors">Cancel</a>
     <button type="submit">Create</button>
 </form>
