--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -17,6 +17,6 @@
 
 <div>
     <% books.forEach(book => { %>
-        <img height="150" width="100" src="<%= book.coverImagePath %>">
-        <% }) %>
+        <%- include("../partials/bookPreview", {book: book}) %>
+    <% }) %>
 </div>
