--- a/views/books/_form_fields.ejs
+++ b/views/books/_form_fields.ejs
@@ -16,7 +16,7 @@
 </div>
 <div>
     <label>Publish Date</label>
-    <input type="date" name="publishDate" value="<%= book.publishDate == null ? "" : book.publishDate.toISOString().split("T")[0] %>">
+    <input type="date" name="publishDate" value="<%= book.publishDate == null ? "" : book.publishDate.toISOString().split('T')[0] %>">
     <label>Page Count</label>
     <input type="number" name="pageCount" min="1" value="<%= book.pageCount %>">
 </div>
