--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -1,8 +1,10 @@
 <h2><%= author.name %></h2>
-<a href="/authors/<%= author.id %>/edit">Edit</a>
-<%- include("../partials/deleteForm", {
-            url: `/authors/${author.id}`}) %>
-<% if(booksByAuthor.length > 0) { %>
+<div class ="btn-row">
+  <a  class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
+  <%- include("../partials/deleteForm", {
+    url: `/authors/${author.id}`}) %>
+  <% if(booksByAuthor.length > 0) { %>
+</div>
   <h2>Books by Author</h2>
   <div>
     <% booksByAuthor.forEach(book => { %>
