--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/stylesheets/main.css" rel="stylesheet">
     <link href="https://unpkg.com/filepond/dist/filepond.css" rel="stylesheet">
     <link href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css" rel="stylesheet">
     <script defer src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.js"></script>
@@ -14,8 +15,12 @@
     <title>Mybrary</title>
 </head>
 <body>
-    <%- include("../partials/header.ejs") %>
-    <%- include("../partials/errorMessage.ejs") %>
-    <%- body %>
+    <div class="container">
+        <%- include("../partials/header.ejs") %>
+        <div class="inner-container">
+            <%- include("../partials/errorMessage.ejs") %>
+            <%- body %>
+        </div>
+    </div>
 </body>
 </html>
