--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -20,9 +20,5 @@
         <button class="btn btn-primary" type="submit">Search</button>
     </div>
 </form>
-
-<div>
-    <% books.forEach(book=> { %>
-        <%- include("../partials/bookPreview", {book: book}) %>
-            <% }) %>
-</div>
+<br>
+<%- include("../partials/bookGrid", {books: books}) %>
