--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,6 +3,7 @@
 @import "shared/header.css";
 @import "shared/buttons.css";
 @import "shared/form.css";
+@import "shared/book.css";
 
 :root{
   font-family: "gotham Rounded";
@@ -31,4 +32,8 @@ body {
 h2 {
   font-size: 2rem;
   font-weight: 500;
+}
+
+.error-message {
+  color: hsl(var(--color-danger-hue), 100%, 50%);
 }
