--- a/views/authors/show.ejs
+++ b/views/authors/show.ejs
@@ -2,13 +2,9 @@
 <div class ="btn-row">
   <a  class="btn btn-primary" href="/authors/<%= author.id %>/edit">Edit</a>
   <%- include("../partials/deleteForm", {
-    url: `/authors/${author.id}`}) %>
-  <% if(booksByAuthor.length > 0) { %>
+              url: `/authors/${author.id}`}) %>
 </div>
-  <h2>Books by Author</h2>
-  <div>
-    <% booksByAuthor.forEach(book => { %>
-        <%- include("../partials/bookPreview", {book: book}) %>
-    <% }) %>
-  </div>
-<% } %>
+<% if (booksByAuthor.length > 0) { %>
+  <h2 class="page-header">Books By Author</h2>
+  <%- include("../partials/bookGrid", {books: booksByAuthor}) %>
+  <% } %>
